force-app/main/default/objects/Routing_Table__c/Routing_Table__c.object-meta.xml
<CustomObject>
    <description>Routing reference table to support routing needs of the programs.</description>
    <label>Routing Table</label>
    <nameField>
        <label>Zip Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Routing Tables</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>