force-app/main/default/objects/Routing_Table__c/fields/Chapters_Route_To__c.field-meta.xml
<CustomField>
    <fullName>Chapters_Route_To__c</fullName>
    <description>Chapters routing for this zip code.</description>
    <inlineHelpText>Chapters routing for this zip code.</inlineHelpText>
    <label>Chapters Route To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>