force-app/main/default/objects/Routing_Table__c/fields/Driver_Safety_Route_To__c.field-meta.xml
<CustomField>
    <fullName>Driver_Safety_Route_To__c</fullName>
    <description>Driver Safety routing for this zip code.</description>
    <inlineHelpText>Driver Safety routing for this zip code.</inlineHelpText>
    <label>Driver Safety Route To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>