force-app/main/default/objects/Routing_Table__c/fields/DST__c.field-meta.xml
<CustomField>
    <fullName>DST__c</fullName>
    <description>Identifies if the given zip code observes Daylight Savings Time (1=Yes, 0=No)</description>
    <inlineHelpText>Identifies if the given zip code observes Daylight Savings Time (1=Yes, 0=No).</inlineHelpText>
    <label>DST</label>
    <length>255</length>
    <type>Text</type>
</CustomField>