force-app/main/default/objects/Routing_Table__c/fields/Experience_Corps_Route_To__c.field-meta.xml
<CustomField>
    <fullName>Experience_Corps_Route_To__c</fullName>
    <description>Experience Corps routing for this zip code.</description>
    <inlineHelpText>Experience Corps routing for this zip code.</inlineHelpText>
    <label>Experience Corps Route To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>