force-app/main/default/objects/Routing_Table__c/fields/Last_Geolocation_Sync__c.field-meta.xml
<CustomField>
    <fullName>Last_Geolocation_Sync__c</fullName>
    <label>Last Geolocation Sync</label>
    <type>Date</type>
</CustomField>