force-app/main/default/objects/Routing_Table__c/fields/Life_Reimagined_Route_to__c.field-meta.xml
<CustomField>
    <fullName>Life_Reimagined_Route_to__c</fullName>
    <description>Life Reimagined routing for this zip code.</description>
    <inlineHelpText>Life Reimagined routing for this zip code.</inlineHelpText>
    <label>Life Reimagined Route To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>