force-app/main/default/objects/Routing_Table__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <description>Will be populated upon data load.  Should correlate to the Postal Code that is on the record.</description>
    <label>State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>