force-app/main/default/objects/Routing_Table__c/fields/States_Route_To__c.field-meta.xml
<CustomField>
    <fullName>States_Route_To__c</fullName>
    <description>States routing for this zip code.</description>
    <inlineHelpText>States routing for this zip code.</inlineHelpText>
    <label>States Route To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>