force-app/main/default/objects/Routing_Table__c/fields/Tax_Aide_Route_To__c.field-meta.xml
<CustomField>
    <fullName>Tax_Aide_Route_To__c</fullName>
    <description>Tax-Aide routing for this zip code.</description>
    <inlineHelpText>Tax-Aide routing for this zip code.</inlineHelpText>
    <label>Tax-Aide Route To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>