force-app/main/default/objects/Routing_Table__c/fields/Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>Time_Zone__c</fullName>
    <description>Salesforce time zone value for the Zip Code in the Unique field.</description>
    <inlineHelpText>Salesforce time zone value for the Zip Code in the Unique field.</inlineHelpText>
    <label>Time Zone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>