force-app/main/default/objects/Routing_Table__c/fields/Unique__c.field-meta.xml
<CustomField>
    <fullName>Unique__c</fullName>
    <description>Hidden field used to populate with Name value (via workflow) to ensure zip codes are unique for each record.</description>
    <inlineHelpText>Hidden field used to populate with Name value (via workflow) to ensure zip codes are unique for each record.</inlineHelpText>
    <label>Unique Zip Code</label>
    <length>5</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>