force-app/main/default/objects/Routing_Table__c/listViews/VI_and_PR_States.listView-meta.xml
<ListView>
    <fullName>VI_and_PR_States</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>NAME</columns>
    <columns>State__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>State__c</field>
        <operation>equals</operation>
        <value>VI</value>
    </filters>
    <filters>
        <field>State__c</field>
        <operation>equals</operation>
        <value>PR</value>
    </filters>
    <label>VI and PR States</label>
    <sharedTo>
        <role>VTM_Manager</role>
    </sharedTo>
</ListView>